--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
 
 <div class="cascata">
   <div class="foto" style="--angle: -10deg;">
-    <img src="\Users\Dosuhra\Desktop\Nova pasta (2)\feliz-dia-dos-namorados\src\foto 1.jpeg" alt="Foto 1">
+    <img src="src\foto 1.jpeg" alt="Foto 1">
   </div>
   <div class="foto" style="--angle: 8deg;">
-    <img src="\Users\Dosuhra\Desktop\Nova pasta (2)\feliz-dia-dos-namorados\src\foto 2.jpeg" alt="Foto 2">
+    <img src="src\foto 2.jpeg" alt="Foto 2">
   </div>
   <div class="foto" style="--angle: -5deg;">
-    <img src="\Users\Dosuhra\Desktop\Nova pasta (2)\feliz-dia-dos-namorados\src\foto 3.jpeg" alt="Foto 3">
+    <img src="src\foto 3.jpeg" alt="Foto 3">
   </div>
   <div class="foto" style="--angle: 12deg;">
-    <img src="\Users\Dosuhra\Desktop\Nova pasta (2)\feliz-dia-dos-namorados\src\foto 4.jpeg" alt="Foto 4">
+    <img src="src\foto 4.jpeg" alt="Foto 4">
   </div>
 </div>
 
