--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     h1 {
       font-size: 2.5em;
       color: #fff;
-      text-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+  text-shadow: 2px 2px rgb(10, 10, 10);
       margin-bottom: 20px;
       z-index: 2;
     }
@@ -88,6 +88,7 @@
 <body>
 
 <h1>Feliz Dia dos Namorados ❤️</h1>
+
 
 <div class="coracoes">
   <div class="coracao" style="--size: 20px; --left: 10%; --duration: 8s;">❤️</div>
