--- a/index.html
+++ b/index.html
@@ -2,40 +2,58 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Cascata com Corações</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cardápio - Restaurante Delícia</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <header>
+    <h1>🍝 Restaurante Delícia</h1>
+    <p>Sabores que encantam!</p>
+  </header>
 
-<h1>Feliz Dia dos Namorados ❤️</h1>
+  <section class="menu">
+    <h2>Entradas</h2>
+    <div class="item">
+      <h3>Bruschetta</h3>
+      <p>Pão italiano com tomate, manjericão e azeite</p>
+      <span>R$ 12,00</span>
+    </div>
+    <div class="item">
+      <h3>Salada Caprese</h3>
+      <p>Mussarela de búfala, tomate e manjericão</p>
+      <span>R$ 18,00</span>
+    </div>
 
+    <h2>Pratos Principais</h2>
+    <div class="item">
+      <h3>Spaghetti à Carbonara</h3>
+      <p>Com bacon, parmesão e pimenta do reino</p>
+      <span>R$ 32,00</span>
+    </div>
+    <div class="item">
+      <h3>Risoto de Cogumelos</h3>
+      <p>Arroz arbório, cogumelos frescos e parmesão</p>
+      <span>R$ 35,00</span>
+    </div>
 
-<section class="coracoes">
-  <div class="coracao" style="--size: 20px; --left: 10%; --duration: 8s;">❤️</div>
-  <div class="coracao" style="--size: 25px; --left: 30%; --duration: 10s;">❤️</div>
-  <div class="coracao" style="--size: 18px; --left: 50%; --duration: 12s;">❤️</div>
-  <div class="coracao" style="--size: 22px; --left: 70%; --duration: 9s;">❤️</div>
-  <div class="coracao" style="--size: 30px; --left: 85%; --duration: 11s;">❤️</div>
-  <div class="coracao" style="--size: 15px; --left: 20%; --duration: 7s;">❤️</div>
-  <div class="coracao" style="--size: 28px; --left: 60%; --duration: 13s;">❤️</div>
-</section> 
+    <h2>Bebidas</h2>
+    <div class="item">
+      <h3>Suco Natural</h3>
+      <p>Laranja, limão ou abacaxi</p>
+      <span>R$ 8,00</span>
+    </div>
+    <div class="item">
+      <h3>Vinho da Casa</h3>
+      <p>Taça de vinho tinto ou branco</p>
+      <span>R$ 15,00</span>
+    </div>
+  </section>
 
-
-<section class="cascata">
-  <div class="foto" style="--angle: -10deg;">
-    <img src="src\foto 1.jpeg" alt="Foto 1">
-  </div>
-  <div class="foto" style="--angle: 8deg;">
-    <img src="src\foto 2.jpeg" alt="Foto 2">
-  </div>
-  <div class="foto" style="--angle: -5deg;">
-    <img src="src\foto 3.jpeg" alt="Foto 3">
-  </div>
-  <div class="foto" style="--angle: 12deg;">
-    <img src="src\foto 4.jpeg" alt="Foto 4">
-  </div>
-</section>
-
+  <footer>
+    <p>📍 Rua das Flores, 123 - Centro</p>
+    <p>📞 (51) 99999-9999</p>
+  </footer>
 </body>
 </html>
-<script src="\Nova pasta (2)\feliz-dia-dos-namorados"></script>
+<script src="/meu%20restaurante/pagina/index.html"></script>
